Add recoonect endpoint
